libapache2-mod-perl2 (2.0.8+httpd24-r1449661-5) UNRELEASED; urgency=low

  * Update debian/patches/280-ignore-sysconf-for-defines.patch not
    to unnecessarily use explicit configuration file and server root
    for running 'apache2 -l'
  * Update debian/patches/030-apxs-no-prefix.patch to fall back to
    SYSCONFDIR when PREFIX fails.

 -- Niko Tyni <ntyni@debian.org>  Wed, 19 Jun 2013 22:10:37 +0300

libapache2-mod-perl2 (2.0.8+httpd24-r1449661-4) unstable; urgency=low

  * Add 320-cleanup-authn-authz-providers.patch from Niko Tyni.
    The patch makes sure authn and authz providers are cleaned up in time by
    registering them in the configuration pool rather than the server process
    pool.
    Thanks to Stefan Fritsch for suggesting the fix. (Closes: #711213)
  * Update lintian override (false positive spelling-error).

 -- gregor herrmann <gregoa@debian.org>  Sat, 15 Jun 2013 17:29:02 +0200

libapache2-mod-perl2 (2.0.8+httpd24-r1449661-3) unstable; urgency=low

  * Add a patch to handle a test failure with newer HTTP::Headers.
    Thanks to Niko Tyni for the analysis. (Closes: #710873)
  * Load the mod_auth_digest module in debian/apache2.conf and remove the
    TODOs from the t/hooks/authen_digest.t in debian/patches/290-httpd-
    transition-test-todo.patch.
    This addresses parts of #710327. Thanks to Niko Tyni for the pointer.
  * After loading mod_auth_digest, the tests behave differently. Tests in
    ModPerl-Registry/ and Apache-Reload/ are now run by dh_auto_test.
    Adjust debian/rules.
  * The newly run tests in ModPerl-Registry/ and Apache-Reload/ need
    DefaultRuntimeDir set, otherwise mod_auth_digest tries to write to
    /var/run and fails. Add patch 310-defaultruntimedir.patch:
    Set DefaultRuntimeDir in the created apache config for Apache::Test in
    Apache-Test/lib/Apache/TestConfig.pm.
    Thanks to Niko Tyni for his help in teaking this patch.

 -- gregor herrmann <gregoa@debian.org>  Tue, 04 Jun 2013 19:01:10 +0200
