@@ -5,6 +5,8 @@ libapache2-mod-perl2 (2.0.8+httpd24-r1449661-5) UNRELEASED; urgency=low
     for running 'apache2 -l'
   * Update debian/patches/030-apxs-no-prefix.patch to fall back to
     SYSCONFDIR when PREFIX fails.
+  * Include the contents of t/logs/error_log in the build log
+    if the test suite fails, to debug #711167 on ia64.
 
  -- Niko Tyni <ntyni@debian.org>  Wed, 19 Jun 2013 22:10:37 +0300
 
